--- a/random-act-generator/public/index.html
+++ b/random-act-generator/public/index.html
@@ -5,6 +5,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 
+    <!-- Animate.CSS CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
     <!--Start Google Font Type-->
    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
